# actirepo

./: MANIFEST.in  README.md  action.yml  pyproject.toml  requirements.txt
src/actirepo/: __init__.py  __main__.py  activity.py  artifact.py  category.py  config.toml  console.py  file_utils.py  format_utils.py  image_utils.py  question.py  repo.py
src/actirepo/moodle/: ddimageortext.py  ddmarker.py  essay.py  multichoice.py  question.py  quiz.py  shortanswer.py  stats.py  truefalse.py
src/actirepo/templates/: README.activity.template.md  README.category.template.md  README.repo.template.md
src/actirepo/utils/: dict_utils.py  file_utils.py  image_utils.py  mime_utils.py
src/cli/: __main__.py
tests/: README.md  repo.json
tests/category/: README.md  category.json
tests/category/sample1/: README.md  activity.json  questions1.xml
tests/category/sample2/: README.md
tests/category/subcategory/: README.md  category.json
tests/sample/: activity.json
tests/sample1/: README.md  activity.json
tests/sample2/: README.md
